package com.example.huffmancode.controller;

import com.example.huffmancode.model.User;
import com.example.huffmancode.repository.UserRepository;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.security.crypto.password.PasswordEncoder; // 用于密码加密和匹配
import org.springframework.web.bind.annotation.*;

import java.util.Map;
import java.util.Optional;

@RestController
@RequestMapping("/api/auth")
public class AuthController {

    private final UserRepository userRepository;
    private final PasswordEncoder passwordEncoder;

    // 使用构造器注入依赖
    public AuthController(UserRepository userRepository, PasswordEncoder passwordEncoder) {
        this.userRepository = userRepository;
        this.passwordEncoder = passwordEncoder;
    }

    @PostMapping("/register")
    public ResponseEntity<?> registerUser(@RequestBody AuthRequest registerRequest) {
        // 检查用户名是否已存在
        if (userRepository.findByUsername(registerRequest.getUsername()).isPresent()) {
            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of("message", "错误: 用户名已存在!"));
        }

        // 创建新用户实例
        User user = new User();
        user.setUsername(registerRequest.getUsername());

        // 1. 设置明文密码到 plainPassword 字段
        user.setPlainPassword(registerRequest.getPassword());

        // 2. 设置加密后的密码到 password 字段
        user.setPassword(passwordEncoder.encode(registerRequest.getPassword()));

        // 3. 保存用户
        userRepository.save(user);

        return ResponseEntity.ok(Map.of("message", "用户注册成功!"));
    }

    @PostMapping("/login")
    public ResponseEntity<?> loginUser(@RequestBody AuthRequest loginRequest) {
        Optional<User> userOptional = userRepository.findByUsername(loginRequest.getUsername());

        // 检查用户是否存在，以及密码是否匹配
        if (userOptional.isEmpty() || !passwordEncoder.matches(loginRequest.getPassword(), userOptional.get().getPassword())) {
            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "错误: 无效的账号或密码"));
        }

        // 登录成功
        // 实际项目中，这里会生成并返回一个JWT Token
        return ResponseEntity.ok(Map.of(
                "message", "登录成功",
                "username", userOptional.get().getUsername()
        ));
    }

    // 用于接收登录和注册请求的DTO
    static class AuthRequest {
        private String username;
        private String password;

        public String getUsername() {
            return username;
        }

        public void setUsername(String username) {
            this.username = username;
        }

        public String getPassword() {
            return password;
        }

        public void setPassword(String password) {
            this.password = password;
        }
    }
}
